ADD create circle box icon

--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,5 @@
     "presets": [
         [ "react-app", { "absoluteRuntime": false } ]
     ],
-    "plugins": ["@babel/plugin-proposal-optional-chaining"]
+    "plugins": ["@babel/plugin-proposal-optional-chaining", "macros"]
 }
