--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "react-image-annotate",
   "version": "2.0.0",
   "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "@mui/icons-material": "^5.2.1",
-    "@mui/material": "^5.2.3",
-    "@mui/styles": "^5.2.3",
+    "@babel/helper-builder-react-jsx-experimental": "^7.12.11",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.2",
+    "@mui/styles": "^5.9.2",
     "@semantic-release/git": "^9.0.0",
     "autoseg": "^0.0.12",
+    "babel-plugin-macros": "^3.1.0",
     "clamp": "^1.0.1",
     "color-alpha": "^1.0.4",
     "get-image-data": "^3.0.1",
@@ -22,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-full-screen": "^0.3.1",
     "react-hotkeys": "^2.0.0",
+    "react-icons": "^4.4.0",
     "react-json-view": "^1.19.1",
     "react-markdown": "^4.0.6",
     "react-material-workspace-layout": "^1.0.10",
@@ -72,15 +77,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@storybook/addon-actions": "^5.3.14",
-    "@storybook/addon-links": "^5.3.14",
-    "@storybook/addons": "^5.3.14",
-    "@storybook/react": "^5.3.14",
-    "babel-loader": "^8.0.5",
-    "babel-preset-react-app": "^7.0.0",
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/addons": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "babel-loader": "^8.2.5",
+    "babel-preset-react-app": "^10.0.1",
     "gh-pages": "^2.0.1",
     "prettier": "^2.5.1",
     "raw.macro": "^0.3.0",
