--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styles": "^5.9.2",
     "@semantic-release/git": "^9.0.0",
     "autoseg": "^0.0.12",
+    "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "clamp": "^1.0.1",
     "color-alpha": "^1.0.4",
@@ -22,8 +23,8 @@
     "material-survey": "^2.1.0",
     "mmgc1-cpp": "^1.0.50",
     "moment": "^2.23.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-full-screen": "^0.3.1",
     "react-hotkeys": "^2.0.0",
     "react-icons": "^4.4.0",
