--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@mui/styles": "^5.9.2",
+    "@progress/kendo-react-form": "^5.5.0",
     "@semantic-release/git": "^9.0.0",
     "autoseg": "^0.0.12",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.2.0",
     "clamp": "^1.0.1",
     "color-alpha": "^1.0.4",
     "get-image-data": "^3.0.1",
+    "gl-matrix": "^3.4.3",
+    "mapbox-gl": "^2.9.2",
     "material-survey": "^2.1.0",
+    "mdb-react-ui-kit": "^4.1.0",
+    "mdb-ui-kit": "^4.4.0",
     "mmgc1-cpp": "^1.0.50",
     "moment": "^2.23.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
     "react-full-screen": "^0.3.1",
     "react-hotkeys": "^2.0.0",
     "react-icons": "^4.4.0",
@@ -33,6 +40,8 @@
     "react-material-workspace-layout": "^1.0.10",
     "react-monaco-editor": "^0.25.1",
     "react-remove-scroll": "^2.0.4",
+    "react-router-dom": "5",
+    "react-scroll": "^1.8.7",
     "react-select": "^3.0.8",
     "react-syntax-highlighter": "^12.2.1",
     "react-use": "^13.27.0",
@@ -43,13 +52,14 @@
     "styled-components": "^5.2.1",
     "transformation-matrix-js": "^2.7.6",
     "use-event-callback": "^0.1.0",
-    "use-key-hook": "^1.3.0"
+    "use-key-hook": "^1.3.0",
+    "web-vitals": "^2.1.4"
   },
   "peerDependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
-  "homepage": "/react-image-annotate",
+  "homepage": "/",
   "repository": {
     "type": "git",
     "url": "https://github.com/UniversalDataTool/react-image-annotate.git"
