--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@mui/styles": "^5.9.2",
-    "@progress/kendo-react-form": "^5.5.0",
     "@semantic-release/git": "^9.0.0",
     "autoseg": "^0.0.12",
     "axios": "^0.27.2",
@@ -22,7 +21,7 @@
     "clamp": "^1.0.1",
     "color-alpha": "^1.0.4",
     "get-image-data": "^3.0.1",
-    "gl-matrix": "^3.4.3",
+    "google-maps-react": "^2.0.6",
     "mapbox-gl": "^2.9.2",
     "material-survey": "^2.1.0",
     "mdb-react-ui-kit": "^4.1.0",
@@ -52,17 +51,16 @@
     "styled-components": "^5.2.1",
     "transformation-matrix-js": "^2.7.6",
     "use-event-callback": "^0.1.0",
-    "use-key-hook": "^1.3.0",
-    "web-vitals": "^2.1.4"
+    "use-key-hook": "^1.3.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "homepage": "/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/UniversalDataTool/react-image-annotate.git"
+    "url": "https://github.com/gnamiro/react-image-annotate.git"
   },
   "scripts": {
     "start": "react-scripts start",
