--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "styled-components": "^5.3.5",
     "transformation-matrix-js": "^2.7.6",
     "use-event-callback": "^0.1.0",
-    "use-key-hook": "^1.3.0"
+    "use-key-hook": "^1.3.0",
+    "uuid": "^8.3.2"
   },
   "peerDependencies": {
     "react": "^17.0.0",
