--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hotkeys": "^2.0.0",
     "react-icons": "^4.4.0",
     "react-json-view": "^1.19.1",
+    "react-map-gl": "5.2.11",
     "react-markdown": "^4.0.6",
     "react-material-workspace-layout": "^1.0.10",
     "react-monaco-editor": "^0.25.1",
@@ -43,6 +44,7 @@
     "react-scroll": "^1.8.7",
     "react-select": "^3.0.8",
     "react-syntax-highlighter": "^12.2.1",
+    "react-tag-input-component": "^1.1.1",
     "react-use": "^13.27.0",
     "react-use-measure": "^2.0.0",
     "seamless-immutable": "^7.1.4",
@@ -51,7 +53,8 @@
     "styled-components": "^5.2.1",
     "transformation-matrix-js": "^2.7.6",
     "use-event-callback": "^0.1.0",
-    "use-key-hook": "^1.3.0"
+    "use-key-hook": "^1.3.0",
+    "web-vitals": "^2.1.4"
   },
   "peerDependencies": {
     "react": "^17.0.0",
@@ -80,10 +83,8 @@
     "extends": "react-app"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    "defaults",
+    "not ie 11"
   ],
   "devDependencies": {
     "@babel/cli": "^7.18.9",
